tests/purs/failing/CycleInForeignDataKinds.out
Error found:
at tests/purs/failing/CycleInForeignDataKinds.purs:5:1 - 5:31 (line 5, column 1 - line 5, column 31)

  A cycle appears in a set of kind declarations:

    {[33mBar[0m, [33mFoo[0m}

  Kind declarations may not refer to themselves in their own signatures.


See https://github.com/purescript/documentation/blob/master/errors/CycleInKindDeclaration.md for more information,
or to contribute content related to this error.

